2.2: 2017.06.25 change SYS_MaxWidth, SYS_MaxHeight in a4v.ps etc
2.1: 2017.06.24 change default PROV_KANJI_XGAP 2.0 to 2.4
2.0: 2013.07.15 change encoding to UTF-8
1.1: 2008.05.27 fix README typo.
                add environment variable for -text option.
                  o PROV_ANK_POINT
                  o PROV_ANK_XGAP
                  o PROV_ANK_YGAP
                  o PROV_KANJI_POINT
                  o PROV_KANJI_XGAP
                  o PROV_KANJI_YGAP
                add new macro for overlay.
                  o setXgap
                  o setYgap
                add new parameter(x_gap, y_gap) for format definition.
                you can add comment line which is started with `#' to format definition file.
                add gsave at top and grestore at end of generated postscript file.
1.0: 2003.08.11 second release.
0.1: 2000.02.24 first release.